# shop_bot

./: .env.example  .gitignore  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 20230813_0213_040891328a7b.py
src/: main.py
src/common/: bootstrapper.py  database.py  exceptions.py  settings.py
src/models/: __init__.py  admin.py  base.py  category.py  product.py  user.py
src/schemas/: admin.py  category.py  image.py  product.py  toast.py  user.py
src/telegram/: router.py
src/utils/: cli.py  singleton.py
src/utils/web/: image.py  require_login.py
src/web/: middlewares.py  router.py  routes.py
src/web/routes/: auth.py  categories.py  images.py  products.py  users.py
src/web/schemas/: admin.py
src/web/utils/: username_context_processor.py
static/css/: main.min.css
templates/: categories.jinja2  login.jinja2  new_category.jinja2  new_product.jinja2  products.jinja2  users.jinja2
templates/partials/: base.jinja2  layout.jinja2  navbar.jinja2  sidebar.jinja2
templates/partials/modals/: edit-category-modal.jinja2  edit-product-modal.jinja2
templates/partials/navbar/: user-menu.jinja2
